chore: separate steps

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -32,11 +32,13 @@ jobs:
           python3 proxyScraper.py -p http -o proxies/http.txt
           python3 proxyScraper.py -p https -o proxies/https.txt
 
-      - name: Check proxies
+      - name: Check HTTP proxies
         run: |
           python3 proxyChecker.py -t 20 -s google.com -l proxies/http.txt -o proxies/http-tested/google.txt
           python3 proxyChecker.py -t 20 -s facebook.com -l proxies/http.txt -o proxies/http-tested/facebook.txt
 
+      - name: Check HTTPS proxies
+        run: |
           python3 proxyChecker.py -t 20 -s google.com -l proxies/https.txt -o proxies/https-tested/google.txt
           python3 proxyChecker.py -t 20 -s facebook.com -l proxies/https.txt -o proxies/https-tested/facebook.txt
 
