feat: add branch

--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -3,6 +3,8 @@ name: Check and push proxies
 on:
   workflow_run: 
     workflows: ["get_proxies"]
+    branches: 
+      - main
     types: 
       - completed
 
