--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -1,40 +1,18 @@
 name: Check and push proxies
 
 on:
-  schedule:
-    - cron: '0 */3 * * *'
-  push: 
-    branches:
+  workflow_run: 
+    workflows: 
+      - Get Proxies and push proxies
+    branches: 
       - main
+    types: 
+      - completed
 
 permissions:                
     contents: write
     
 jobs:
-  get_proxies:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-
-      - name: Get HTTP proxies
-        run: |
-          python3 proxyScraper.py -t 20 -s http -o proxies/http.txt
-
-      - name: Get HTTPS proxies
-        run: |
-          python3 proxyScraper.py -t 20 -s https -o proxies/https.txt
-          
   test_proxies:
     runs-on: ubuntu-latest
     strategy:
