feat: add microsoft and whatsapp checker

--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -25,6 +25,8 @@ jobs:
           - twitter
           - tiktok
           - youtube
+          - whatsapp
+          - microsoft
 
     steps:
       - name: Checkout repository
