--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -16,6 +16,7 @@ jobs:
   test_proxies:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         os:
           - ubuntu-latest
