feat: add instagram and discord check

--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -29,6 +29,8 @@ jobs:
           - youtube
           - whatsapp
           - microsoft
+          - discord
+          - instagram
 
     steps:
       - name: Checkout repository
