--- a/.github/workflows/checkProxy.yaml
+++ b/.github/workflows/checkProxy.yaml
@@ -31,6 +31,7 @@ jobs:
           - microsoft
           - discord
           - instagram
+          - microsoft
 
     steps:
       - name: Checkout repository
